fix: error load gapi

--- a/src/components/User/styles.module.scss
+++ b/src/components/User/styles.module.scss
@@ -1,6 +1,7 @@
 .user {
   width: 200px;
   display: flex;
+  align-items: center;
   justify-content: end;
 
   @media screen and (max-width: 700px) {
@@ -17,5 +18,6 @@
   .img {
     width: 50px;
     height: 50px;
+    border-radius: 50%;
   }
 }
